--- a/styles.css
+++ b/styles.css
@@ -43,6 +43,15 @@ body {
     --text: #dbc1ac;
 }
 
+#loader {
+    position: absolute;
+    top: 0;
+    background-color: var(--bg);
+    z-index: 9999;
+    width: 100vw;
+    height: 100vh;
+}
+
 header .right {
     display: flex;
     flex-direction: row;
@@ -124,7 +133,7 @@ header img {
 section.hero {
     position: relative;
     z-index: 1;
-    display: flex;
+    display: none;
     align-items: center;
     width: 100%;
     height: 700px;
