--- a/styles.css
+++ b/styles.css
@@ -43,15 +43,6 @@ body {
     --text: #dbc1ac;
 }
 
-#loader {
-    position: absolute;
-    top: 0;
-    background-color: var(--bg);
-    z-index: 9999;
-    width: 100vw;
-    height: 100vh;
-}
-
 header .right {
     display: flex;
     flex-direction: row;
@@ -283,3 +274,56 @@ section.hero .hero-text img {
     color: #dbc1ac;
     background-color: #38220f;
 }
+
+
+/*------loader ----------------------------*/ 
+
+#loader {
+    position: fixed;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    top: 0;
+    background-color: var(--bg);
+    z-index: 9999;
+    width: 100vw;
+    height: 100vh;
+}
+
+
+.lds-ring {
+    display: inline-block;
+    position: relative;
+    width: 80px;
+    height: 80px;
+  }
+  .lds-ring div {
+    box-sizing: border-box;
+    display: block;
+    position: absolute;
+    width: 64px;
+    height: 64px;
+    margin: 8px;
+    border: 8px solid var(--text);
+    border-radius: 50%;
+    animation: lds-ring 1.2s cubic-bezier(0.5, 0, 0.5, 1) infinite;
+    border-color: var(--text) transparent transparent transparent;
+  }
+  .lds-ring div:nth-child(1) {
+    animation-delay: -0.45s;
+  }
+  .lds-ring div:nth-child(2) {
+    animation-delay: -0.3s;
+  }
+  .lds-ring div:nth-child(3) {
+    animation-delay: -0.15s;
+  }
+  @keyframes lds-ring {
+    0% {
+      transform: rotate(0deg);
+    }
+    100% {
+      transform: rotate(360deg);
+    }
+  }
+  
