--- a/src/CSS/menu.css
+++ b/src/CSS/menu.css
@@ -1,5 +1,5 @@
 .menu {
-    padding: 0 32px;
+    padding: 0 120px;
     width: 100%;
     height: 500px;
 }
@@ -20,7 +20,7 @@
 }
 
 .menu-content .side-bar {
-    width: 200px;
+    min-width: 200px;
     height: 100%;
     background-color: var(--sec-bg);
     display: flex;
@@ -40,6 +40,7 @@
     color: var(--text);
     font-size: 16px;
     padding: 3px 10px;
+    cursor: pointer;
 }
 
 .menu-content .side-bar .cat-btn.active {
@@ -90,4 +91,34 @@
 
 .hidden {
     display: none !important;
+}
+
+
+@media (max-width: 825px) {
+    .menu {
+        padding: 0 32px;
+    }
+}
+
+@media (max-width: 650px) {
+    .menu-content .side-bar h1 {
+        display: none;
+    }
+    .menu-content .side-bar  {
+        min-width: 52px;
+    }
+
+    .menu-content .cat-itmes .item {
+        font-size: 16px;
+    }
+
+    /* header {
+        display: none;
+    } */
+}
+
+@media (max-width: 400px) {
+    .menu-content .cat-itmes .item {
+        font-size: 14px;
+    }
 }
