--- a/src/CSS/menu.css
+++ b/src/CSS/menu.css
@@ -2,14 +2,10 @@
     padding: 0 120px;
     width: 100%;
     height: 500px;
+    margin-bottom: 200px;
 }
 
-#menu {
-    font-size: 48px;
-    color: var(--text);
-    text-align: center;
-    padding: 30px;
-}
+
 
 .menu-content {
     background-color: var(--bg-menu);
