--- a/src/CSS/hero.css
+++ b/src/CSS/hero.css
@@ -10,30 +10,29 @@ section.hero {
     background-size: cover;
     background-attachment: fixed;
     overflow-x: hidden;
-    
-}  
+}
 
 #bgImg {
     display: none;
 }
-  
+
 .coffee-cup {
+    --coffee-cup-width: 500px;
     position: absolute;
     top: 20%;
 
-    width: 500px;
-    animation: rotation 2s ease ;
-    animation-fill-mode: forwards;  
-    /* transform: translate(calc(100vw - 500px), 0) rotate(90deg); */
+    width: var(--coffee-cup-width);
+    animation: rotation 2s ease;
+    animation-fill-mode: forwards;
 }
 
 section.hero .left {
-    
+
     position: absolute;
     top: 15%;
     left: 64px;
 
-    animation: fade ease 2s;  
+    animation: fade ease 2s;
 
 }
 
@@ -47,7 +46,7 @@ section.hero .left {
 section.hero h1 {
     font-size: 78px;
 }
- 
+
 
 section.hero h2 {
     font-size: 48px;
@@ -66,7 +65,7 @@ section.hero .hero-text img {
     flex-direction: row;
     width: 80%;
     justify-content: space-around;
-    
+
 }
 
 .button-30 {
@@ -75,7 +74,7 @@ section.hero .hero-text img {
     background-color: #dbc1ac;
     border-radius: 4px;
     border-width: 0;
-    box-shadow: rgba(45, 35, 66, 0.4) 0 2px 4px,rgba(45, 35, 66, 0.3) 0 7px 13px -3px,#7877772c 0 -3px 0 inset;
+    box-shadow: rgba(45, 35, 66, 0.4) 0 2px 4px, rgba(45, 35, 66, 0.3) 0 7px 13px -3px, #7877772c 0 -3px 0 inset;
     color: #38220f;
     cursor: pointer;
     display: inline-flex;
@@ -92,48 +91,129 @@ section.hero .hero-text img {
     position: relative;
     text-align: left;
     text-decoration: none;
-    transition: box-shadow .15s,transform .15s;
+    transition: box-shadow .15s, transform .15s;
     user-select: none;
     -webkit-user-select: none;
     touch-action: manipulation;
     white-space: nowrap;
-    will-change: box-shadow,transform;
+    will-change: box-shadow, transform;
     font-size: 24px;
-  }
-  
-  
-  .button-30:hover {
+}
+
+
+.button-30:hover {
     box-shadow: rgba(45, 35, 66, 0.4) 0 4px 8px, rgba(45, 35, 66, 0.3) 0 7px 13px -3px, #7877772c 0 -3px 0 inset;
     transform: translateY(-2px);
-  }
-  
-  .button-30:active {
+}
+
+.button-30:active {
     box-shadow: #7877772c 0 3px 7px inset;
     transform: translateY(2px);
-  }
-  
-  .about-us {
-      color: #dbc1ac;
-      background-color: #38220f;
-  }
+}
+
+.about-us {
+    color: #dbc1ac;
+    background-color: #38220f;
+}
 
 @keyframes rotation {
-    0%{
+    0% {
         transform: translate(0 - 0) rotate(0);
     }
 
     100% {
-        transform: translate(calc(100vw - 500px), 0) rotate(90deg);
+        transform: translate(calc(100vw - var(--coffee-cup-width)), 0) rotate(90deg);
     }
 }
 
 
 @keyframes fade {
-    0%{
+    0% {
         opacity: 0;
     }
 
     100% {
         opacity: 1;
+    }
+}
+
+@media (max-width: 1200px) {
+    .coffee-cup {
+        --coffee-cup-width: 400px;
+    }
+}
+
+@media (max-width: 1100px) {
+    .coffee-cup {
+        --coffee-cup-width: 350px;
+    }
+
+    section.hero h1 {
+        font-size: 62px;
+    }
+
+
+    section.hero h2 {
+        font-size: 40px;
+    }
+
+    section.hero .hero-text img {
+        width: 250px;
+        margin-left: -20px;
+    }
+
+    section.hero {
+        height: 500px;
+    }
+
+}
+
+@media (max-width: 900px) {
+    .coffee-cup {
+        --coffee-cup-width: 200px;
+    }
+
+    section.hero .left{
+        left: 32px;
+    }
+
+    section.hero h1 {
+        font-size: 50px;
+    }
+
+    .button-30 {
+        width: 100px;
+        height: 48px;
+        font-size: 20px;
+    }
+
+    section.hero h2 {
+        font-size: 30px;
+    }
+
+    section.hero {
+        height: 400px;
+    }
+
+}
+
+@media (max-width: 710px) {
+
+    section.hero h1 {
+        font-size: 40px;
+    }
+
+    section.hero h2 {
+        font-size: 24px;
+        margin-top: -15px;
+    }
+
+    section.hero .hero-text img {
+        width: 200px;
+        margin-left: -10px;
+    }
+
+    section.hero {
+        height: 300px;
     }
 }
