--- a/src/CSS/hero.css
+++ b/src/CSS/hero.css
@@ -10,6 +10,7 @@ section.hero {
     background-size: cover;
     background-attachment: fixed;
     overflow-x: hidden;
+    box-shadow: 0px 23px 15px 2px rgba(1,1,1,0.2);
 }
 
 #bgImg {
