--- a/src/CSS/menu.css
+++ b/src/CSS/menu.css
@@ -13,6 +13,9 @@
     height: 100%;
     display: flex;
     flex-direction: row;
+    box-shadow: 1px 0px 39px -7px rgba(0, 0, 0, 0.72);
+    -webkit-box-shadow: 1px 0px 39px -7px rgba(0, 0, 0, 0.72);
+    -moz-box-shadow: 1px 0px 39px -7px rgba(0, 0, 0, 0.72);
 }
 
 .menu-content .side-bar {
