--- a/src/CSS/contact.css
+++ b/src/CSS/contact.css
@@ -100,6 +100,7 @@
     outline: none;
     resize: none;
     background-color: var(--text);
+    color: var(--text-wb-menu);
 }
 
 .contactForm .inputBox span {
